bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: not found: type ==
  if(message:String==R){
                   ^BDR:8: error: not found: type ==
  if(message:String==L){
                   ^BDR:12: error: not found: type ==
  if(message:String==I){
                   ^BDR:17: error: not found: type ==
  if(message:String==A){
                   ^BDR:20: error: not found: type ==
  if(message:String==B){
                   ^BDR:24: error: not found: type ==
  if(message:String==C){
                   ^BDR:29: error: not found: type ==
  if(message:String==Z){
                   ^BDR:32: error: not found: type ==
  if(message:String==Y){
                   ^BDR:36: error: not found: type ==
  if(message:String==X){
                   ^