bdr.BDR.scala.code
var message:String=null
while(estSurMessage()){
  message=litMessage()
  if(message:String==R){
    droite()
    avance()
  }
  if(message:String==L){
    gauche()
    avance()
  }
  if(message:String==I){
    droite()
    droite()
    avance()
  }
  if(message:String==A){
    avance()
  }
  if(message:String==B){
    avance()
    avance()
  }
  if(message:String==C){
    avance()
    avance()
    avance()
  }
  if(message:String==Z){
    recule()
  }
  if(message:String==Y){
    recule()
    recule()
  }
  if(message:String==X){
    recule()
    recule()
    recule()
  }
}